Configure correctly ms-user to take configs from config server

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -3,6 +3,17 @@ spring:
     active: native
 ---
 spring:
+  profiles: native
+  cloud:
+    config:
+      server:
+        native:
+          search-locations:
+            file:///C:/Users/taq/Projects/microservices-demo/ms-config-properties/{application}/{profile},
+            file:///C:/Users/taq/Projects/microservices-demo/ms-config-properties/global/{profile}
+---
+spring:
+  profiles: git
   cloud:
     config:
       server:
