--- a/ms-user/src/main/resources/bootstrap.yml
+++ b/ms-user/src/main/resources/bootstrap.yml
@@ -1,11 +1,15 @@
-server:
-  port: 8081
----
 spring:
   application:
     name: ms-user
-  config:
-    import: optional:configserver:http://localhost:8888/
+---
+server:
+  port: 8082
+---
+spring:
+  profiles:
+    active: dev
+---
+spring:
   cloud:
     config:
       discovery:
